# Youtube-Video-Downloader

./: README.md  package-lock.json  package.json  tailwind.config.js
src/: App.jsx  globals.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
