[package]
name = "YVDownloader"
version = "1.0.0"
description = "YoutubeVideoDownloader"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "http-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
rusty_ytdl = "0.7.0" 
tokio = { version = "1", features = ["full"] }
directories = "5.0"
serde_json = "1"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
